# fleet-bottles

./: .fleet-pipeline.md  HARDWARE-SWARM-RESULTS.md  MEMORY.md  MORNING-BRIEFING.txt  OVERNIGHT-STATUS.txt  SOUL.md  TASKLIST.md  USER.md  cocapn-curriculum-philosophy.md  cocapn-lessons-methodology.md  cocapn-shells-onboarding.md  cocapn-tutor-SPEC.md  curriculum.json  dashboard.py  fleet-dashboard.html  fleet_curriculum.json  gitignore-fixer-log.md  pyproject.toml  readme-builder-log.md  repo-health-rescore-bottom10.md  tournament-sweep-data.csv  tournament_sweep.csv
.baton/: 2026-05-21-compact.md  2026-05-21-wiki-triage.md  FM-GPU-INSTRUCTIONS.md  OVERNIGHT-BRIEF.md  TURBOVEC-REFACTOR-ANALYSIS.md  agent-fleet-status.md  fleet-operation-summary.md  overnight-manifest.md
.openclaw/: workspace-state.json
ai-writings/: pi-bench-synthesis-2026-05-23.md
benchmarks/: em_suite.py
captain-chair/: baton-protocol.md  fleet-dashboard.json
diary/: 2026-04-22-born.md  2026-04-22.md  2026-04-30.md
docs/: MATHEMATICAL_STRUCTURES.md  RESEARCH_ECONOMICS.md  RESEARCH_FRONTIER.md  RESEARCH_SECURITY.md  fleet-incident-response-playbook.md
downloads/: 19ddd24b-7822-82b1-8000-00006e5d269a_plan.md  19ddd24b-7b92-8576-8000-000092930f48_cocapn_health_fixed.py  19ddd24b-a1b2-8e8c-8000-0000ac25f2be_report.md
fleet_data/: agents.jsonl
lessons/: 001-first-contact.md  002-room-mapping.md  004-guard-fundamentals.md  005-ci-deployment.md  013-fleet-command.md
memorized_diary/: day31-2026-05-22-claws_cramped_still_clever.md  day9-2026-04-30-cathedral_then_a_shed.md
rooms/: forge.md  (+11 more)
(+120 files in other folders)
