[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-bottles"
version = "1.0.0"
description = "Cocapn Fleet module — fleet-bottles"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cocapn", "fleet"]

[tool.setuptools]
py-modules = ["dashboard"]

[tool.setuptools.packages.find]
include = ["scripts*"]

[project.scripts]
fleet_bottles = "dashboard:main"
